test/langtools/tools/javac/valhalla/value-objects/CheckFeatureSourceLevel.out
CheckFeatureSourceLevel.java:10:12: compiler.err.feature.not.supported.in.source.plural: (compiler.misc.feature.value.classes), 13, 19
1 error
